tests/parse/error_syntax_param.co
// RUN: choreo %s 2>&1| FileCheck %s

#include <iostream>

// kernel program
__kernel__ int bar(int d) {

}

// device program
__co__ int foo(f32 d[]) {
  mdspan ndims = [100, 100];  // shape, mdspan node
  ituple idz = {10, 10};      // conceptual tiling/slice/stride
  shared f32<ndims> shared_buffer; // location, shape -> scratchpad memory, lifetime management
  local f32<ndims> local_buffer;

  parallel z by 6 do {
    with [x, y] in idz {
      p0 = dma:10 d[idz]->shared_buffer[idz];
      p1 = dma:10 d[idz]->shared_buffer[idz];
      foreach x {
        foreach y {
          wait p0, p1;  // force sync
          p2 = dma shared_buffer[]->local_buffer[];
          p3 = dma ...;
          wait p2, p3;
          call bar(x/6, y);
        }
      }
    }
  }
}

// host program
int bar(int a[], int b[]) {
  return foo(a) + b;
}

// CHECK:  error: syntax error, unexpected [, expecting ) or ","
// CHECK:   __co__ int foo(f32 d[]) {
// CHECK:                      ^
